[BACKPORT 2.18][#18482][yugabyted] Fix total disk usage on overview page
Summary:
Fix total disk usage on overview page so that it accurately shows the total disk size for local and remote clusters
Original commit: fbfbfe6424f58f00a90628096dcb774de0e60ef7 / D27455

Test Plan: no test plan

Reviewers: nikhil

Reviewed By: nikhil

Subscribers: yugabyted-dev, djiang

Differential Revision: https://phorge.dev.yugabyte.com/D29043
