# yugabyted-ui/apiserver/cmd/server/.docs/api/openapi.yaml
@@ -575,6 +575,7 @@ components:
         disk_size_used_gb: 5.637376656633329
         num_cores: 7
         memory_mb: 1.4658129805029452
+        ram_provisioned_gb: 9.301444243932576
         cpu_usage: 2.3021358869347655
         disk_size_gb: 5.962133916683182
       properties:
@@ -602,10 +603,16 @@ components:
           default: 0
           description: The number of CPU cores per node
           type: integer
+        ram_provisioned_gb:
+          default: 0
+          description: The total size of provisioned ram (GB)
+          format: double
+          type: number
       required:
       - disk_size_gb
       - memory_mb
       - num_cores
+      - ram_provisioned_gb
       title: Cluster Node Info
       type: object
     ClusterInfo:
@@ -616,10 +623,11 @@ components:
           disk_size_used_gb: 5.637376656633329
           num_cores: 7
           memory_mb: 1.4658129805029452
+          ram_provisioned_gb: 9.301444243932576
           cpu_usage: 2.3021358869347655
           disk_size_gb: 5.962133916683182
         is_production: false
-        version: 9
+        version: 3
         num_nodes: 2
       properties:
         num_nodes:
@@ -657,7 +665,7 @@ components:
       example:
         cloud_info:
           region: us-west2
-        num_nodes: 9
+        num_nodes: 5
       properties:
         cloud_info:
           $ref: '#/components/schemas/CloudInfo'
@@ -677,7 +685,7 @@ components:
         placement_info:
           cloud_info:
             region: us-west2
-          num_nodes: 9
+          num_nodes: 5
       properties:
         placement_info:
           $ref: '#/components/schemas/PlacementInfo'
@@ -706,11 +714,11 @@ components:
         - placement_info:
             cloud_info:
               region: us-west2
-            num_nodes: 9
+            num_nodes: 5
         - placement_info:
             cloud_info:
               region: us-west2
-            num_nodes: 9
+            num_nodes: 5
         name: name
         cloud_info:
           region: us-west2
@@ -723,10 +731,11 @@ components:
             disk_size_used_gb: 5.637376656633329
             num_cores: 7
             memory_mb: 1.4658129805029452
+            ram_provisioned_gb: 9.301444243932576
             cpu_usage: 2.3021358869347655
             disk_size_gb: 5.962133916683182
           is_production: false
-          version: 9
+          version: 3
           num_nodes: 2
       properties:
         name:
@@ -807,11 +816,11 @@ components:
           - placement_info:
               cloud_info:
                 region: us-west2
-              num_nodes: 9
+              num_nodes: 5
           - placement_info:
               cloud_info:
                 region: us-west2
-              num_nodes: 9
+              num_nodes: 5
           name: name
           cloud_info:
             region: us-west2
@@ -824,10 +833,11 @@ components:
               disk_size_used_gb: 5.637376656633329
               num_cores: 7
               memory_mb: 1.4658129805029452
+              ram_provisioned_gb: 9.301444243932576
               cpu_usage: 2.3021358869347655
               disk_size_gb: 5.962133916683182
             is_production: false
-            version: 9
+            version: 3
             num_nodes: 2
         info:
           metadata:
@@ -1747,11 +1757,11 @@ components:
             - placement_info:
                 cloud_info:
                   region: us-west2
-                num_nodes: 9
+                num_nodes: 5
             - placement_info:
                 cloud_info:
                   region: us-west2
-                num_nodes: 9
+                num_nodes: 5
             name: name
             cloud_info:
               region: us-west2
@@ -1764,10 +1774,11 @@ components:
                 disk_size_used_gb: 5.637376656633329
                 num_cores: 7
                 memory_mb: 1.4658129805029452
+                ram_provisioned_gb: 9.301444243932576
                 cpu_usage: 2.3021358869347655
                 disk_size_gb: 5.962133916683182
               is_production: false
-              version: 9
+              version: 3
               num_nodes: 2
           info:
             metadata:
