# yugabyted-ui/apiserver/cmd/server/handlers/api_cluster.go
@@ -23,7 +23,7 @@ func (c *Container) GetCluster(ctx echo.Context) error {
         tabletServersFuture := make(chan helpers.TabletServersFuture)
         mastersFuture := make(chan helpers.MastersFuture)
         clusterConfigFuture := make(chan helpers.ClusterConfigFuture)
-        go helpers.GetTabletServersFuture(helpers.HOST, tabletServersFuture)
+        go helpers.GetTabletServersFuture(c.logger, helpers.HOST, tabletServersFuture)
         go helpers.GetMastersFuture(helpers.HOST, mastersFuture)
         go helpers.GetClusterConfigFuture(helpers.HOST, clusterConfigFuture)
 
@@ -40,10 +40,14 @@ func (c *Container) GetCluster(ctx echo.Context) error {
         // queries that need to be made to each node separately
         // - Getting gflags for each tserver/master
         // - Getting version information from each node
+        // - Getting ram limits from each tserver/master
         nodeList := helpers.GetNodesList(tabletServersResponse)
+        reducedNodeList := helpers.RemoveLocalAddresses(nodeList)
         gFlagsTserverFutures := []chan helpers.GFlagsFuture{}
         gFlagsMasterFutures := []chan helpers.GFlagsFuture{}
         versionInfoFutures := []chan helpers.VersionInfoFuture{}
+        masterMemTrackersFutures := []chan helpers.MemTrackersFuture{}
+        tserverMemTrackersFutures := []chan helpers.MemTrackersFuture{}
         for _, nodeHost := range nodeList {
                 gFlagsTserverFuture := make(chan helpers.GFlagsFuture)
                 gFlagsTserverFutures = append(gFlagsTserverFutures, gFlagsTserverFuture)
@@ -54,6 +58,15 @@ func (c *Container) GetCluster(ctx echo.Context) error {
                 versionInfoFuture := make(chan helpers.VersionInfoFuture)
                 versionInfoFutures = append(versionInfoFutures, versionInfoFuture)
                 go helpers.GetVersionFuture(nodeHost, versionInfoFuture)
+        }
+        for _, nodeHost := range reducedNodeList {
+                masterMemTrackersFuture := make(chan helpers.MemTrackersFuture)
+                masterMemTrackersFutures = append(masterMemTrackersFutures, masterMemTrackersFuture)
+                go helpers.GetMemTrackersFuture(nodeHost, true, masterMemTrackersFuture)
+                tserverMemTrackersFuture := make(chan helpers.MemTrackersFuture)
+                tserverMemTrackersFutures =
+                    append(tserverMemTrackersFutures, tserverMemTrackersFuture)
+                go helpers.GetMemTrackersFuture(nodeHost, false, tserverMemTrackersFuture)
         }
 
     // Getting relevant data from tabletServersResponse
@@ -180,7 +193,7 @@ func (c *Container) GetCluster(ctx echo.Context) error {
         averageCpu := float64(0)
         totalDiskGb := float64(0)
         freeDiskGb := float64(0)
-        hostToUuid, err := helpers.GetHostToUuidMap(helpers.HOST)
+        hostToUuid, err := helpers.GetHostToUuidMap(c.logger, helpers.HOST)
         if err == nil {
             sum := float64(0)
             for _, uuid := range hostToUuid {
@@ -208,26 +221,48 @@ func (c *Container) GetCluster(ctx echo.Context) error {
                 }
             }
             averageCpu = (sum * 100) / float64(len(hostToUuid))
-            // Get the disk usage as well. Assume every node reports the same metrics for disk space
-            query :=
-              fmt.Sprintf(QUERY_LIMIT_ONE, "system.metrics", "total_disk", hostToUuid[helpers.HOST])
-            iter := session.Query(query).Iter()
-            var ts int64
-            var value int
-            var details string
-            iter.Scan(&ts, &value, &details)
-            totalDiskGb = float64(value) / helpers.BYTES_IN_GB
-            query =
-              fmt.Sprintf(QUERY_LIMIT_ONE, "system.metrics", "free_disk", hostToUuid[helpers.HOST])
-            iter = session.Query(query).Iter()
-            iter.Scan(&ts, &value, &details)
-            freeDiskGb = float64(value) / helpers.BYTES_IN_GB
-        } else {
+
+            // Get the disk usage as well. We assume all nodes report the size of a different disk,
+            // unless the node has a 127.x.x.x address, which assume reports the disk size of the
+            // same machine. If all addresses are 127.x.x.x addresses, assume there is only
+            // one machine in the cluster. If there are a mix of 127.x.x.x and non 127.x.x.x
+            // addresses, assume the 127.x.x.x addresses share a machine with one of the non
+            // 127.x.x.x addresses.
+
+            // Thus, we will only count the metrics from non 127 addresses, unless all addresses
+            // are 127, in which case we count only one of them.
+            for _, host := range reducedNodeList {
+                query := fmt.Sprintf(
+                    QUERY_LIMIT_ONE, "system.metrics", "total_disk", hostToUuid[host])
+                iter := session.Query(query).Iter()
+                var ts int64
+                var value int
+                var details string
+                iter.Scan(&ts, &value, &details)
+                totalDiskGb += float64(value) / helpers.BYTES_IN_GB
+                query = fmt.Sprintf(
+                    QUERY_LIMIT_ONE, "system.metrics", "free_disk", hostToUuid[host])
+                iter = session.Query(query).Iter()
+                iter.Scan(&ts, &value, &details)
+                freeDiskGb += float64(value) / helpers.BYTES_IN_GB
+            }
+        } else{
             logger.Log.Errorf("[GetHostToUuidMap]", err)
         }
         // Get software version
         smallestVersion := helpers.GetSmallestVersion(versionInfoFutures)
         numCores := numNodes * int32(runtime.NumCPU())
+
+        // Get ram limits
+        ramProvisionedBytes := float64(0)
+        for _, memTrackersFuture :=
+            range append(tserverMemTrackersFutures, masterMemTrackersFutures...) {
+            memTrackersResult := <-memTrackersFuture
+            if memTrackersResult.Error == nil {
+                ramProvisionedBytes += float64(memTrackersResult.Limit)
+            }
+        }
+        ramProvisionedGb := ramProvisionedBytes / helpers.BYTES_IN_GB
 
     response := models.ClusterResponse{
         Data: models.ClusterData{
@@ -240,11 +275,12 @@ func (c *Container) GetCluster(ctx echo.Context) error {
                     FaultTolerance: faultTolerance,
                     ReplicationFactor: clusterReplicationFactor,
                     NodeInfo: models.ClusterNodeInfo{
-                        MemoryMb:       ramUsageMb,
-                        DiskSizeGb:     totalDiskGb,
-                        DiskSizeUsedGb: totalDiskGb - freeDiskGb,
-                        CpuUsage:       averageCpu,
-                        NumCores:       numCores,
+                        MemoryMb:         ramUsageMb,
+                        DiskSizeGb:       totalDiskGb,
+                        DiskSizeUsedGb:   totalDiskGb - freeDiskGb,
+                        CpuUsage:         averageCpu,
+                        NumCores:         numCores,
+                        RamProvisionedGb: ramProvisionedGb,
                     },
                 },
                 ClusterRegionInfo: &clusterRegionInfo,
